# AutoPoseEstimator

./: .cproject  .gitignore  .project  Makefile  input_mar12a.param
demo/: RunBatchRecalibEval_new.py  auto_pos_est  auto_recalib_seq  gen_param_list.py  input.param  input_mar12a.param
demo/data/calib/: extrinsics.yml  intrinsics.yml
matlab/: AxisRotation.m  CheckRectification.m  CheckRectification2.m  CorrectRotation.m  E2Rts.m  EpipolarError.m  ErrorJacob.m  FindEpiCorres.m  FindEpiCorres2.m  GetCorres.m  OptimizePos.m  OptimizePos2.m  PosEstByEb.m  PosEstByEbRansac.m  PosEstByF.m  PoseEMat.m  RectifyImage.m  RectifyImageold.m  RectifyStereo.m  RectifyStereoold.m  RotationMatDist.m  RunImageRectification.m  RunPosEst.m  RunPosEst2.m  RunPosEstOneCase.m  Skew.m  adjustCorres.m  computeH_norm.m  computeSizeRatio.m  correspondfilter.m  decompose.m  decompost.m  drawline.m  e2R.m  eightpointE.m  eightpointF.m  essentialMatrix.m  exec.m  findEssentialmatrixRansac.m  goodcorres.m  (+9 more)
src/: AutoCalibParam.cpp  AutoCalibParam.h  AutoPosEst.cpp  AutoPosEstimator.cpp  AutoPosEstimator.h  AutoRecalibrator.cpp  AutoRecalibrator.h  CMakeLists.txt  CorrespondenceDetector.cpp  CorrespondenceDetector.h  FeatureExtractor.cpp  FeatureExtractor.h  Parameters.cpp  Parameters.h  StereoVisualizeUtils.cpp  StereoVisualizeUtils.h  StringProc.h  cpu_sncc.cpp  cpu_sncc.h
src/libf2c/: libf2c_i2.so.2
